# RK-Parsers

./: LICENSE  README.md  pyproject.toml
simbank_data_parser/: scrapy.cfg
simbank_data_parser/simbank_data_parser/: items.py  middlewares.py  settings.py
simbank_data_parser/simbank_data_parser/spiders/: messages.py  simbank_data_spider.py
